// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`complex_pks_example > decorators > mysql 1`] = `
[
  "import { PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { Entity, OneToOne, Property } from '@mikro-orm/decorators/legacy';
import { Events } from './Events';

@Entity()
export class EventDetails {

  [PrimaryKeyProp]?: 'weekday';

  @OneToOne({ entity: () => Events, ref: true, fieldNames: ['weekday', 'at'], primary: true })
  weekday!: Ref<Events>;

  @Property({ type: 'text', length: 65535, nullable: true })
  moreInfo?: string;

}

export const EventDetailsWeekday = {
  MONDAY: 'Monday',
  TUESDAY: 'Tuesday',
  WEDNESDAY: 'Wednesday',
  THURSDAY: 'Thursday',
  FRIDAY: 'Friday',
  SATURDAY: 'Saturday',
  SUNDAY: 'Sunday',
} as const;

export type TEventDetailsWeekday = (typeof EventDetailsWeekday)[keyof typeof EventDetailsWeekday];
",
  "import { PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { Entity, ManyToOne, OneToOne, PrimaryKey, Property } from '@mikro-orm/decorators/legacy';
import { EventDetails } from './EventDetails';
import { Worktime } from './Worktime';

@Entity()
export class Events {

  [PrimaryKeyProp]?: ['weekday', 'at'];

  @ManyToOne({ entity: () => Worktime, ref: true, fieldName: 'weekday', primary: true })
  weekday!: Ref<Worktime>;

  @PrimaryKey({ type: 'time' })
  at!: string;

  @Property()
  what!: string;

  @OneToOne({ entity: () => EventDetails, ref: true, mappedBy: 'weekday' })
  eventDetails?: Ref<EventDetails>;

}

export const EventsWeekday = {
  MONDAY: 'Monday',
  TUESDAY: 'Tuesday',
  WEDNESDAY: 'Wednesday',
  THURSDAY: 'Thursday',
  FRIDAY: 'Friday',
  SATURDAY: 'Saturday',
  SUNDAY: 'Sunday',
} as const;

export type TEventsWeekday = (typeof EventsWeekday)[keyof typeof EventsWeekday];
",
  "import { Collection, PrimaryKeyProp } from '@mikro-orm/core';
import { Entity, Enum, OneToMany, Property } from '@mikro-orm/decorators/legacy';
import { Events } from './Events';

@Entity({ comment: 'Worktime. If a day is holiday, remove the row.' })
export class Worktime {

  [PrimaryKeyProp]?: 'weekday';

  @Enum({ items: () => WorktimeWeekday, primary: true })
  weekday!: TWorktimeWeekday;

  @Property({ type: 'time' })
  from!: string;

  @Property({ type: 'time' })
  to!: string;

  @OneToMany({ entity: () => Events, mappedBy: 'weekday' })
  eventsCollection = new Collection<Events>(this);

}

export const WorktimeWeekday = {
  MONDAY: 'Monday',
  TUESDAY: 'Tuesday',
  WEDNESDAY: 'Wednesday',
  THURSDAY: 'Thursday',
  FRIDAY: 'Friday',
  SATURDAY: 'Saturday',
  SUNDAY: 'Sunday',
} as const;

export type TWorktimeWeekday = (typeof WorktimeWeekday)[keyof typeof WorktimeWeekday];
",
]
`;

exports[`complex_pks_example > entitySchema > mysql 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { Events } from './Events';

export class EventDetails {
  [PrimaryKeyProp]?: 'weekday';
  weekday!: Ref<Events>;
  moreInfo?: string;
}

export const EventDetailsSchema = new EntitySchema({
  class: EventDetails,
  properties: {
    weekday: {
      primary: true,
      kind: '1:1',
      entity: () => Events,
      ref: true,
      fieldNames: ['weekday', 'at'],
    },
    moreInfo: { type: 'text', length: 65535, nullable: true },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { EventDetails } from './EventDetails';
import { Worktime } from './Worktime';

export class Events {
  [PrimaryKeyProp]?: ['weekday', 'at'];
  weekday!: Ref<Worktime>;
  at!: string;
  what!: string;
  eventDetails?: Ref<EventDetails>;
}

export const EventsSchema = new EntitySchema({
  class: Events,
  properties: {
    weekday: {
      primary: true,
      kind: 'm:1',
      entity: () => Worktime,
      ref: true,
      fieldName: 'weekday',
    },
    at: { primary: true, type: 'time' },
    what: { type: 'string' },
    eventDetails: {
      kind: '1:1',
      entity: () => EventDetails,
      ref: true,
      mappedBy: 'weekday',
    },
  },
});
",
  "import { Collection, EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { Events } from './Events';

export class Worktime {
  [PrimaryKeyProp]?: 'weekday';
  weekday!: TWorktimeWeekday;
  from!: string;
  to!: string;
  eventsCollection = new Collection<Events>(this);
}

export const WorktimeWeekday = {
  MONDAY: 'Monday',
  TUESDAY: 'Tuesday',
  WEDNESDAY: 'Wednesday',
  THURSDAY: 'Thursday',
  FRIDAY: 'Friday',
  SATURDAY: 'Saturday',
  SUNDAY: 'Sunday',
} as const;

export type TWorktimeWeekday = (typeof WorktimeWeekday)[keyof typeof WorktimeWeekday];

export const WorktimeSchema = new EntitySchema({
  class: Worktime,
  comment: 'Worktime. If a day is holiday, remove the row.',
  properties: {
    weekday: { primary: true, enum: true, items: () => WorktimeWeekday },
    from: { type: 'time' },
    to: { type: 'time' },
    eventsCollection: { kind: '1:m', entity: () => Events, mappedBy: 'weekday' },
  },
});
",
]
`;
